# cpp-base

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp  readme.md
app_algorithms/src/: CMakeLists.txt  conanfile.py
app_algorithms/src/algorithms/sha256/: binaryOperatiors.cpp  binaryOperators.h  common.cpp  common.h  conversions.cpp  conversions.h  formulas.cpp  formulas.h  index.h  sha256.cpp  sha256.h
app_blockchain/src/: CMakeLists.txt  conanfile.py
app_blockchain/src/blockchain/: block.cpp  block.h  blockchain.cpp  blockchain.h  database.cpp  database.h  index.h  transtraction.cpp  transtraction.h  user.cpp  user.h
app_blokchain/src/: CMakeLists.txt  conanfile.py
app_blokchain/src/blockchain/: blockchain.cpp  blockchain.h  index.h  memPool.cpp  memPool.h  transtraction.cpp  transtraction.h
app_blokchain/src/blockchain/block/: block.cpp  block.h  blockHeader.h  genesis.cpp  genesis.h
app_blokchain/src/blockchain/coins/: cent.h  coin.cpp  coin.h
app_blokchain/src/blockchain/crypto/: rsa.cpp  rsa.h
app_blokchain/src/blockchain/files/: chainLedger.h  ledger.h  memPoolLedger.h  peerLedger.h
app_blokchain/src/blockchain/node/: miner.cpp  miner.h  node.cpp  node.h  wallet.cpp  wallet.h
app_blokchain/src/blockchain/utils/: params.cpp  params.h
app_database/src/: CMakeLists.txt  conanfile.py
app_database/src/database/: ConnectionPool.cpp  ConnectionPool.h  MySQLConnection.cpp  MySQLConnection.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgreDatabase.cpp  PostgreDatabase.h  SQLLiteDatabase.cpp  SQLLiteDatabase.h  index.h
app_h3/src/: CMakeLists.txt  conanfile.py
app_h3/src/h3/: h3.cpp  h3.h  index.h
app_http/src/: CMakeLists.txt  conanfile.py
app_http/src/http/: httpClient.cpp  httpClient.h  httpServer.cpp  httpServer.h  index.h
app_kafka/src/: CMakeLists.txt  conanfile.py
app_kafka/src/kafka/: ConsumeCb.cpp  ConsumeCb.h  DeliveryReportCb.cpp  DeliveryReportCb.h  Helper.cpp  Helper.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  index.h
app_rabbitMQ/src/: CMakeLists.txt  conanfile.py
app_rabbitMQ/src/rabbitMQ/: consumer.cpp  consumer.h  index.h  producer.cpp  producer.h
app_utils/src/: CMakeLists.txt  conanfile.py
app_utils/src/utils/: ThreadPool.h  index.h  latency.h  time.cpp  time.h
app_utils/src/utils/chrono/: latency.cpp  latency.h  time.cpp  time.h
app_utils/src/utils/error/: error.h
app_utils/src/utils/file/: file.cpp  file.h
app_utils/src/utils/json/: json.cpp  json.h
app_utils/src/utils/log/: consoleLogger.cpp  consoleLogger.h  fileLogger.cpp  fileLogger.h  log.cpp  log.h  logger.h  singletonLogger.cpp  singletonLogger.h
app_utils/src/utils/thread/: ThreadPool.cpp  ThreadPool.h
